# scrapper

./: .coverage  .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  bandit-report.json  bpdb_archive_scraper.py  coverage.xml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  fix_config.py  mypy.ini  pyproject.toml  requirements-storage.txt  requirements.txt  run_bpdb_demo.py  run_bpdb_workflow.py  spec.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docker/: README.md  docker-entrypoint.sh  init-postgres.sql
docs/: BPDB_INTEGRATION_GUIDE.md  README.md
docs/examples/: basic.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/providers/: architecture.md
docs/reference/: cli.md  troubleshooting.md
docs/workflow/: overview.md  step-types.md
examples/: README.md  bpdb_archive_workflow.json  bpdb_simple_test.json  ecommerce-products.json  job-listings.json  news-headlines.json  social-media-posts.json
specs/001-read-spec-md/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-read-spec-md/contracts/: cli-api.md  provider-interfaces.py  provider-interfaces.ts  workflow.schema.json
src/: __init__.py
src/cli/: __init__.py  main.py
src/cli/commands/: __init__.py  providers.py  run.py  validate.py
src/providers/: __init__.py
src/providers/scrapers/: __init__.py  base.py  beautifulsoup.py  bpdb_archive_provider.py  playwright_provider.py  scrapy_provider.py
src/providers/storage/: __init__.py  base.py  csv_provider.py  json_provider.py  postgresql_provider.py
src/scraper_core/: __init__.py
src/scraper_core/cli/: __init__.py
src/scraper_core/cli/commands/: __init__.py
src/scraper_core/models/: __init__.py  data_element.py  page_context.py  provider_config.py  storage.py  workflow.py  workflow_step.py
src/scraper_core/post_processing/: __init__.py  processors.py
src/scraper_core/providers/: __init__.py  factory.py
src/scraper_core/workflow/: __init__.py  engine.py
tests/: __init__.py
tests/contract/: __init__.py  test_data_element_model.py  test_page_context_model.py  test_provider_config_models.py  test_scraping_provider_cleanup.py  test_scraping_provider_execute_discover.py  test_scraping_provider_execute_extract.py  test_scraping_provider_execute_init.py  test_scraping_provider_execute_paginate.py  test_scraping_provider_init.py  test_storage_provider_connect.py  test_storage_provider_disconnect.py  test_storage_provider_store.py  test_workflow_engine_execute.py  test_workflow_engine_validate.py  test_workflow_model.py  test_workflow_step_model.py
tests/fixtures/: __init__.py  nginx.conf
tests/fixtures/html/: index.html  page2.html
tests/fixtures/init/: init_test_data.py
tests/integration/: __init__.py  test_beautifulsoup_workflow.py  test_csv_storage.py  test_e2e_quickstart.py  test_playwright_workflow.py  test_postgresql_storage.py  test_scrapy_workflow.py
tests/unit/: test_models_import.py  test_placeholder.py
